--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clean": "find . -name node_modules -o -name .turbo -o -name .next -o -name dist -o -name __generated__ -type d -prune | xargs rm -rf",
     "codegen:tests": "turbo codegen-tests",
     "codegen:entrypoints": "turbo codegen-entrypoints",
+    "codegen:tsconfigs": "tsx scripts/tsconfigs.ts",
     "codegen": "run-p codegen:*",
     "prepublish": "pnpm build",
     "postinstall": "pnpm codegen",
