--- a/examples/.railway/next-sse-chat/Dockerfile
+++ b/examples/.railway/next-sse-chat/Dockerfile
@@ -19,11 +19,11 @@ WORKDIR /app
 COPY --from=build /app/out/full/ .
 COPY --from=build /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
 
-# Some other stuff we need to build trpc packages
+# Copy all TypeScript configuration files
 COPY --from=build /app/tsconfig.json ./tsconfig.json
 COPY --from=build /app/tsconfig.build.json ./tsconfig.build.json
+COPY --from=build /app/tsconfig.package.json ./tsconfig.package.json
 COPY --from=build /app/scripts/ ./scripts/
-
 
 RUN pnpm install --frozen-lockfile
 RUN pnpm turbo build --filter=examples-next-sse-chat...
