--- a/examples/.railway/next-sse-chat/Dockerfile
+++ b/examples/.railway/next-sse-chat/Dockerfile
@@ -19,10 +19,8 @@ WORKDIR /app
 COPY --from=build /app/out/full/ .
 COPY --from=build /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
 
-# Copy all TypeScript configuration files
-COPY --from=build /app/tsconfig.json ./tsconfig.json
-COPY --from=build /app/tsconfig.build.json ./tsconfig.build.json
-COPY --from=build /app/tsconfig.package.json ./tsconfig.package.json
+# Some other stuff we need to build trpc packages
+COPY --from=build /app/tsconfig*.json ./
 COPY --from=build /app/scripts/ ./scripts/
 
 RUN pnpm install --frozen-lockfile
