--- a/package.json
+++ b/package.json
@@ -24,12 +24,9 @@
     "format-fix": "pnpm format --write --list-different",
     "lint-prune": "! ts-prune | grep -v \"used in module\" | grep -v rpc | grep -v observable | grep -v http",
     "clean": "find . -name node_modules -o -name .turbo -o -name .next -o -name dist -o -name __generated__ -type d -prune | xargs rm -rf",
-    "codegen:tsconfigs": "tsx scripts/tsconfigs.ts",
-    "codegen:tests": "turbo codegen-tests",
-    "codegen:entrypoints": "turbo codegen-entrypoints",
-    "codegen": "run-p codegen:*",
+    "codegen-tsconfigs": "tsx scripts/tsconfigs.ts",
     "prepublish": "pnpm build",
-    "postinstall": "pnpm codegen",
+    "postinstall": "turbo codegen-tests",
     "prepack": "tsx scripts/version.ts",
     "version": "tsx scripts/version.ts",
     "link-all": "cd packages/server && cd ../server && pnpm link --global && cd ../client && pnpm link --global && cd ../react-query && pnpm link --global && cd ../next && pnpm link --global",
